Styling fix to accommodate for address bar not being accounted for in vh on mobile devices

--- a/css/main.scss
+++ b/css/main.scss
@@ -81,6 +81,10 @@ body {
         justify-content: space-around;
         width: 17rem;
 
+        @media only screen and (max-width: 415px) {
+            margin-bottom: 2em;
+        }
+
         .nav-button {
             padding: 0.75rem;
             font-weight: 300;
